--- a/index.html
+++ b/index.html
@@ -73,20 +73,28 @@
 
 <div class="main-content">
     <h2>مرحباً بكِ في Notevia!</h2>
-    <p>منصة شاملة لدعم الخريجات الجدد وطلاب الجامعات. نقدم لكِ أفضل الخدمات لتحقيق النجاح المهني والتعليمي</p>
+    <p style="direction: rtl; text-align: right;">
+        منصة شاملة لدعم الخريجات الجدد وطلاب الجامعات. نقدم لكِ أفضل الخدمات لتحقيق النجاح المهني والتعليمي.
+    </p>
 
     <div class="services" id="services">
         <div class="service-box">
-            <h3>تصميم CV احترافي</h3>
-            <p>نساعدكِ في إعداد سيرة ذاتية متميزة وجاهزة لسوق العمل</p>
+            <h3 style="direction: rtl; text-align: right;">تصميم CV احترافي</h3>
+            <p style="direction: rtl; text-align: right;">
+                نساعدكِ في إعداد سيرة ذاتية متميزة وجاهزة لسوق العمل.
+            </p>
         </div>
         <div class="service-box">
-            <h3>تدريب على المقابلات</h3>
-            <p>جلسات تدريبية تحاكي مقابلات العمل الفعلية وتساعدكِ في التحضير بشكل احترافي</p>
+            <h3 style="direction: rtl; text-align: right;">تدريب على المقابلات</h3>
+            <p style="direction: rtl; text-align: right;">
+                جلسات تدريبية تحاكي مقابلات العمل الفعلية وتساعدكِ في التحضير بشكل احترافي.
+            </p>
         </div>
         <div class="service-box">
-            <h3>تدريب مهارات التوظيف</h3>
-            <p>تعلمي المهارات الشخصية و الإجتماعية والمهارات الفنية والتقنية التي تحتاجينها لتكوني مستعدة لسوق العمل</p>
+            <h3 style="direction: rtl; text-align: right;">تدريب مهارات التوظيف</h3>
+            <p style="direction: rtl; text-align: right;">
+                تعلمي المهارات الشخصية والاجتماعية والمهارات الفنية والتقنية التي تحتاجينها لتكوني مستعدة لسوق العمل.
+            </p>
         </div>
     </div>
 </div>
