--- a/index.html
+++ b/index.html
@@ -40,20 +40,27 @@
             display: flex;
             justify-content: space-around;
             margin-top: 40px;
+            flex-wrap: wrap;
         }
         .service-box {
-            background-color: white;
+            background-color: #e0f7fa; /* السماوي الفاتح */
             border-radius: 8px;
             padding: 20px;
             width: 30%;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            background-color: #e0f7fa; /* السماوي الفاتح */
+            margin-bottom: 20px;
         }
         footer {
             background-color: #6a4c9c; /* البنفسجي */
             color: white;
             padding: 10px;
             text-align: center;
+        }
+
+        @media (max-width: 768px) {
+            .service-box {
+                width: 80%;
+            }
         }
     </style>
 </head>
@@ -77,31 +84,3 @@
         منصة شاملة لدعم الخريجات الجدد وطلاب الجامعات. نقدم لكِ أفضل الخدمات لتحقيق النجاح المهني والتعليمي.
     </p>
 
-    <div class="services" id="services">
-        <div class="service-box">
-            <h3 style="direction: rtl; text-align: right;">تصميم CV احترافي</h3>
-            <p style="direction: rtl; text-align: right;">
-                نساعدكِ في إعداد سيرة ذاتية متميزة وجاهزة لسوق العمل.
-            </p>
-        </div>
-        <div class="service-box">
-            <h3 style="direction: rtl; text-align: right;">تدريب على المقابلات</h3>
-            <p style="direction: rtl; text-align: right;">
-                جلسات تدريبية تحاكي مقابلات العمل الفعلية وتساعدكِ في التحضير بشكل احترافي.
-            </p>
-        </div>
-        <div class="service-box">
-            <h3 style="direction: rtl; text-align: right;">تدريب مهارات التوظيف</h3>
-            <p style="direction: rtl; text-align: right;">
-                تعلمي المهارات الشخصية والاجتماعية والمهارات الفنية والتقنية التي تحتاجينها لتكوني مستعدة لسوق العمل.
-            </p>
-        </div>
-    </div>
-</div>
-
-<footer>
-    <p>&copy; 2025 Notevia | جميع الحقوق محفوظة</p>
-</footer>
-
-</body>
-</html>
