--- a/index.html
+++ b/index.html
@@ -84,3 +84,31 @@
         منصة شاملة لدعم الخريجات الجدد وطلاب الجامعات. نقدم لكِ أفضل الخدمات لتحقيق النجاح المهني والتعليمي.
     </p>
 
+    <div class="services" id="services">
+        <div class="service-box">
+            <h3 style="direction: rtl; text-align: right;">إعداد سيرة ذاتية متميزة</h3>
+            <p style="direction: rtl; text-align: right;">
+                نساعدكِ في إعداد سيرة ذاتية متميزة وجاهزة لسوق العمل.
+            </p>
+        </div>
+        <div class="service-box">
+            <h3 style="direction: rtl; text-align: right;">تدريب على المقابلات</h3>
+            <p style="direction: rtl; text-align: right;">
+                جلسات تدريبية تحاكي مقابلات العمل الفعلية وتساعدكِ في التحضير بشكل احترافي.
+            </p>
+        </div>
+        <div class="service-box">
+            <h3 style="direction: rtl; text-align: right;">تدريب مهارات التوظيف</h3>
+            <p style="direction: rtl; text-align: right;">
+                تعلمي المهارات الشخصية والاجتماعية والمهارات الفنية والتقنية التي تحتاجينها لتكوني مستعدة لسوق العمل.
+            </p>
+        </div>
+    </div>
+</div>
+
+<footer>
+    <p>&copy; 2025 Notevia | جميع الحقوق محفوظة</p>
+</footer>
+
+</body>
+</html>
