--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <div class="services" id="services">
         <div class="service-box">
-            <h3 style="direction: rtl; text-align: right;">إعداد سيرة ذاتية متميزة</h3>
+            <h3 style="direction: rtl; text-align: right;">إعداد سيرة ذاتية احترافية و متميزة</h3>
             <p style="direction: rtl; text-align: right;">
                 نساعدكِ في إعداد سيرة ذاتية متميزة وجاهزة لسوق العمل.
             </p>
